[build-system]
requires = ["uv_build>=0.9.8,<0.10.0"]
build-backend = "uv_build"

[project]
name = "pix-a-paper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dotenv>=0.9.9",
    "pydantic>=2.12.4",
    "requests>=2.32.5",
    "rich>=14.2.0",
    "rich-pixels>=3.0.1",
    "textual>=6.6.0",
]
